# hympi-ml-retrieval

./: .gitignore  .mailmap  README.md  main.py  mlflow_logging.py  model_builder_tester.py  pyproject.toml  run.sh  test.py
conf/: config.py
conf/Old/: ATMS+BSL.yaml  BSL.yaml  CoSMIR_H.yaml  HW.yaml  MODELONLY_TEST.yaml
data/: memmap.py
docs/: data_and_model_example.ipynb  discover_processing.md  evaluation_examples.ipynb  mlflow.md  spec_system_explainer.md  vscode_adapt.md
evaluation/: Evaluator.py  ProfileEvaluator.py  cdf.py  cdf_maker.py  error.py  metrics.py  plots.py  profile.py
layers/: loss.py  mlp.py  transform.py
model_creation/: custom_mlp.py  encode.py  input.py  loss.py  mlp.py  noise.py  transform.py
notebooks/: HSEL_t.py  cdf.ipynb  ch_test.ipynb  cpl_ae.py  fulldays_example.ipynb  hsel+cpl.py  hsel_ae.py  hsel_t.py  layers.ipynb  lightning_test.ipynb  memmap_tests.ipynb  profile_test.ipynb  temperature_profile_results_analysis.ipynb  test.ipynb
preprocessing/: DataArray.py  DataLoader.py  DataPreprocessor.py  ModelIO.py  fulldays.py  memmap.py  splitters.py
runs/: atms_q.py  atms_t.py  aurora.py  batch_runs.sh  ch.py  eval_pblh.py  h_split_t.py  hsel_ae.py  hsel_q.py  hsel_t.py  merge.py  pblh.py  pblh_run.sh  q_run.sh  t_run.sh  temperature.py  test_eval.py  test_lightning.py  tq.py  water_vapor.py
scripts/: bsl_processor_sigma.ipynb  cdf.py  cloud_reduce_fulldays.py  cpl_stacker.py  data_ingest_aero.py  notes.org  pickle_merge_actual.ipynb  pickle_proto.ipynb  readme.md  reducer.py
utils/: gpu.py  mlflow_logging.py  regen.py
(+157 files in other folders)
