[project]
name = "hympi-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.2",
    "mlflow>=2.22.0",
    "netcdf4>=1.7.2",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchdata>=0.11.0",
    "torchvision>=0.21.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "gpustat>=1.1.1",
]
