[project]
name = "hympi-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.2",
    "lightning>=2.5.1.post0",
    "mlflow>=2.22.0",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "torch>=2.6.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "gpustat>=1.1.1",
]
