[project]
name = "hympi-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning==2.5.0", # pinned to 2.5.0 due to errors with MLFlow integration after this version.
    "mlflow>=3.1.0",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "rich>=14.0.0",
    "torch>=2.6.0",
    "torchmetrics>=1.7.2",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "gpustat>=1.1.1",
]
